--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title><%= titulo %></title>
 </head>
 <body>
 
-    <h1>archivo index dentro directorio public</h1>
+    <h1>Hola a EJS </h1>
     
 </body>
 </html>
