--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -24,14 +24,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
               </li>
-            </ul>
 
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <form class="d-flex">
-                        <button class="btn btn-outline-success" type="submit">Registrate</button>
-                    </form>
-                </li>
+              <li class="nav-item">
+                <form class="d-flex">
+                    <a href="#" class="btn btn-outline-success">Registrate</a>
+                </form>
+              </li>
             </ul>
 
             <form class="d-flex">
