--- a/views/404.ejs
+++ b/views/404.ejs
@@ -7,7 +7,7 @@
 </head>
 <body style="text-align: center;">
 
-    <h1>pagina de error</h1>
+    <h1 class="text-center my-3">Error</h1>
 
     <img src="https://sparktco.com/wp-content/uploads/2019/07/perdido.gif" alt=""/>
     
