--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -6,7 +6,7 @@
     <!-- CSS bootstrap only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <title><%= titulo %></title>
+    <title>MyApp | <%= titulo %></title>
 
 </head>
 <body>
@@ -26,9 +26,7 @@
               </li>
 
               <li class="nav-item">
-                <form class="d-flex">
-                    <a href="#" class="btn btn-outline-success">Registrate</a>
-                </form>
+                  <a href="/registrate" class="btn btn-outline-success">Registrate</a>
               </li>
             </ul>
 
