formulario registrate completado

--- a/views/registrate.ejs
+++ b/views/registrate.ejs
@@ -7,9 +7,34 @@
 
     <!-- CSS bootstrap only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    
+
 </head>
-<body>
+<body style="background-color: #eaeaea;">
+
     <h1 class="text-center my-3">Registrate</h1>
+
+    <div class="container d-flex justify-content-center">
+
+        <form class="w-50 bg-white p-5 mt-3">
+
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Nombre Completo</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Correo Electronico</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <div id="emailHelp" class="form-text">correo electronico valido.</div>
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+              <input type="password" class="form-control" id="exampleInputPassword1">
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+
+    </div>
+
 </body>
 </html>
