--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
+    <title>MyApp | <%= titulo %></title>
 </head>
 <body style="text-align: center;">
 
