--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,38 @@
 <%- include('./templates/header'); %>
 
-    <h1>Holas a EJS </h1>
-
     <div class="container">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia dolore eligendi, cupiditate natus modi expedita, est molestias quibusdam facere illo nihil maiores earum architecto hic sint deleniti ipsa veniam corporis.
-        Autem iure eius earum, rerum mollitia dicta cumque culpa eos eligendi excepturi? Sint id quo delectus. Incidunt adipisci facere ex. Placeat vero maiores exercitationem, aliquid repellat veniam doloremque temporibus ipsam.
-        Nisi accusamus hic amet impedit quia dolor dolorem est et dolorum placeat dolore ex doloremque ipsum cum, voluptatem sunt nobis, sint minus? Quisquam repellat alias sed et corrupti error eum?
-        Ducimus blanditiis minima numquam consequuntur facilis beatae minus debitis quibusdam at consectetur. Nemo eos accusantium quae? Fugit odio ullam architecto doloremque quibusdam! Facilis odit iste consequatur, velit quam quasi repudiandae?
-        Magnam cum minima enim placeat sed debitis ut, amet perspiciatis accusamus hic officia nemo nulla fugit beatae ex neque mollitia nostrum modi, at nesciunt, labore quod minus excepturi est. Doloremque?
-        Quisquam, nam iure? Vitae molestiae totam iure dolores tenetur, nisi inventore et excepturi enim ratione exercitationem consequuntur iste mollitia ipsa repellat, laboriosam commodi veritatis dolorem a libero necessitatibus id reprehenderit.
-        Adipisci ducimus corrupti quisquam eaque! Cupiditate error perferendis dolore consequatur reprehenderit tempore quibusdam fugit, enim magni sit hic mollitia at blanditiis veritatis ex maiores? Maxime ipsum animi asperiores totam nostrum?
-        Dolorum non accusamus inventore dicta dolor voluptatum, ut explicabo corporis similique, saepe nisi et sequi magni. Qui doloremque dignissimos eius, numquam repellendus, explicabo dolor tempora velit, omnis dolorem amet architecto!
-        Nemo omnis, expedita quibusdam mollitia, consectetur ipsum facere eligendi alias sunt esse voluptas architecto sint aperiam ullam blanditiis tenetur error libero temporibus distinctio laudantium possimus odit! Perferendis consequuntur sequi numquam!
-        Ab labore debitis, sit accusantium reiciendis consequuntur illo id nemo repellat ducimus! Deleniti adipisci, ullam sint nisi voluptas officiis quisquam porro! Deserunt molestiae recusandae voluptatibus nulla. Perferendis dolores provident consequatur.</p>
+
+        <h1 class="text-center my-3">Lista Usuarios</h1>
+
+        <table class="table table-striped mt-5">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">First</th>
+                <th scope="col">Last</th>
+                <th scope="col">Handle</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td colspan="2">Larry the Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+        </table>
     </div>
 
 <%- include('./templates/footer'); %>
