implementacion dependencia mongoose

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,8 @@
 
         <h1 class="text-center my-3">Lista Usuarios</h1>
 
+        <%= listado %>
+
         <table class="table table-striped mt-5">
             <thead>
               <tr>
