.env creado y conexion a mongodb con primer select de los usuarios

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 
         <h1 class="text-center my-3">Lista Usuarios</h1>
 
-        <%= listado %>
+        <%= ArrayUsuarios %>
 
         <table class="table table-striped mt-5">
             <thead>
